Fix: fix wrong font-sizing

--- a/assets/front/scss/base/_typography.scss
+++ b/assets/front/scss/base/_typography.scss
@@ -9,12 +9,29 @@ $baseFont     : 'Source Sans Pro', Arial, sans-serif;
 $monotypeFont : 'Roboto Mono', monospace;
 $serviceFont  : "Roboto", sans-serif;
 
-$ms-base: 15/16 * 1em;//<- was 1em == 15px
-$ms-ratio: 1.08;
-$ms-base-fixed: 15px;
 
-$base-line-height: $ms-base * 1.25;
+$ms-base: 1em;
+$ms-ratio: 1.2;
+$ms-base-fixed: 15px;
+$body-base-ratio: 15/16; //<-was 1em when html was 15px
+
+$base-line-height: 1em * 1.25;
 $base-line-height-fixed: 15px * 1.25;
+
+
+$line-height:
+  1.4    20em,
+  1.75   40em;
+
+$ms-range:
+  0.833   20em,
+  $body-base-ratio  60em;
+
+body {
+  font-family: $baseFont;
+  @include ms-respond(line-height, 1, $line-height, 1);
+  @include ms-respond(font-size, 1 );
+}
 
 $ms-range:
   1   20em,
@@ -23,11 +40,6 @@ $ms-range:
 $line-height:
   1.4  20em,
   1.75 40em;
-
-body {
-  font-family: $baseFont;
-  @include ms-respond(line-height, 1, $line-height, 1);
-}
 
 @for $i from 1 through 6 {
   h#{$i} {
@@ -60,13 +72,8 @@ $line-height:
   1.75   40em;
 
 $ms-range:
-  0.833  20em,
-  1      60em;
-
-
-body {
-   @include ms-respond(font-size, 1);
-}
+  0.833   20em,
+  1  60em;
 
 blockquote p {
   font-family: $baseFont;
